[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/StatsController.gd" id="1_75f8a"]
[ext_resource type="PackedScene" path="res://scenes/ui/ConfirmDialog.tscn" id="2_8btnm"]

[node name="Stats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_75f8a")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.11, 0.16, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 32

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Title" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Stats"
theme_override_font_sizes/font_size = 42

[node name="SummaryLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "요약"

[node name="HorseStatsLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "말별 통계"

[node name="RecentLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "최근 5경기"

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResetButton" type="Button" parent="MarginContainer/VBox/ButtonRow"]
custom_minimum_size = Vector2(180, 56)
layout_mode = 2
text = "Reset Stats"

[node name="BackButton" type="Button" parent="MarginContainer/VBox/ButtonRow"]
custom_minimum_size = Vector2(180, 56)
layout_mode = 2
text = "Back"

[node name="ConfirmDialog" parent="." instance=ExtResource("2_8btnm")]
